src/Http/Parser.cpp
#include "Parser.hpp"

#include <cstring>
#include "Arena/Arena.hpp"
#include "Request.hpp"

StatusCode  ParseErrorToStatusCode(enum ParseError error)
{
  StatusCode  status_code = k000;

  switch (error)
  {
  case kNone:
  {
    status_code = k000;
  } break;
  case kSyntaxError:
  case kWrongMethod:
  case kWrongRequestTarget:
  case kWrongHeader:
  case kNoHost:
  case kDuplicatedHost:
  {
    status_code = k400;
  } break;
  case kUnsupportedMethod:
  case kUnsupportedRequestTarget:
  {
    status_code = k501;
  } break;
  case kUnsupportedHttpVersion:
  case kUnsupportedIpAddress:
  case kUnsupportedScheme:
  {
    status_code = k505;
  } break;
  }
  return status_code;
}

enum ParseError AnalysisUriAuthority(http_parser::PTNodeUriAuthority* authority, struct uri::Authority* output)
{
  enum ParseError error = kNone;

  switch (authority->host->address_header->type)
  {
  case http_parser::kIpv6Address:
  {
    output->host.type = uri::Host::IPV6;
    output->host.value = authority->host->ipv6_address->content.to_string();
  } break;
  case http_parser::kIpv4Address:
  {
    output->host.type = uri::Host::IPV4;
    output->host.value = authority->host->ipv4_address->content.to_string();
  } break;
  case http_parser::kRegName:
  {
    output->host.type = uri::Host::REGNAME;
    output->host.value = authority->host->reg_name->content.to_string();
  } break;
  case http_parser::kIpvFutureAddress:
  default:
  {
    error = kUnsupportedIpAddress;
  } break;
  }
  if (authority->port && authority->port->content.is_valid())
    output->port = authority->port->content.to_string();
  return error;
}

enum ParseError AnalysisRequestLine(http_parser::PTNodeRequestLine* request_line, RequestLine* output)
{
  if (!request_line)
    return kSyntaxError;
  enum ParseError error = kNone;
  assert((request_line->type == http_parser::kRequestLine) && "Parse result should be a request line");

  switch (request_line->method->method)
  {
  case kGet:
  case kPost:
  case kDelete:
  {
    output->method = request_line->method->method;
  } break;
  case kUnmatched:
  {
    error = kUnsupportedMethod;
  } break;
  case kWrong:
  {
    error = kWrongMethod;
  } break;
  }
  switch(request_line->request_target_header->type)
  {
  case http_parser::kRequestTargetOriginForm:
  {
    http_parser::PTNodeRequestTargetOriginForm* origin_form = request_line->request_target_origin_form;
    output->request_target.path = origin_form->absolute_path->content.to_string();
    if (origin_form->query && origin_form->query->content.is_valid())
      output->request_target.query = origin_form->query->content.to_string();
  } break;
  case http_parser::kUriAbsolute:
  {
    http_parser::PTNodeUriAbsolute* uri_absolute = request_line->request_target_absolute_form;
    if (uri_absolute->scheme->content.bytes && (uri_absolute->scheme->content.match("http") == 4))
      output->request_target.scheme = "http";
    else
    {
      error = kUnsupportedScheme;
      break;
    }
    if (uri_absolute->query && uri_absolute->query->content.bytes)
      output->request_target.query = uri_absolute->query->content.to_string();
    switch (uri_absolute->path_header->type)
    {
      case http_parser::kUriReferenceNetworkPath:
      {
        error = AnalysisUriAuthority(uri_absolute->network_path_reference->authority, &output->request_target.authority);
        if (error)
          break;
        output->request_target.path = uri_absolute->network_path_reference->path->content.to_string();
      } break;
      case http_parser::kUriAbsolute:
      {
        output->request_target.path = uri_absolute->path_absolute->content.to_string();
      } break;
      case http_parser::kPathRootless:
      {
        output->request_target.path = uri_absolute->path_rootless->content.to_string();
      } break;
      case http_parser::kPathEmpty:
      default:
      {}
    }
  } break;
  case http_parser::kRequestTargetAuthorityForm:
  case http_parser::kRequestAsteriskForm:
  {
    error = kUnsupportedRequestTarget;
  } break;
  default:
  {
    error = kWrongRequestTarget;
  }
  }
  {
    http_parser::PTNodeHttpVersion* version = request_line->version;
    if(version->content.match("HTTP/0.9") == 8)
      output->version = kCompatible;
    else if(version->content.match("HTTP/1.0") == 8)
      output->version = kCompatible;
    else if(version->content.match("HTTP/1.1") == 8)
      output->version = kStandard;
    else if(version->content.match("HTTP/2.0") == 8)
      output->version = kCompatible;
    else
      error = kUnsupportedHttpVersion;
  }
  return error;
}

enum ParseError AnalysisRequestHeaders(http_parser::PTNodeFields* fields, HeaderMap* output)
{
  enum ParseError error = kNone;

  (void) output;
  for (temporary::vector<http_parser::PTNodeFieldLine*>::iterator it = fields->fields.begin(); it != fields->fields.end(); it++)
  {
    http_parser::PTNodeFieldLine* field_line = *it;
    if (field_line->name->content.match("Content-Type") == 12)
    {
      http_parser::ParseOutput parsed_field = http_parser::ParseFieldContentType(field_line->value->content);
      if (parsed_field.is_valid())
      {
        if (output->find("Content-Type") == output->end())
        {
          output->insert(std::make_pair("Content-Type", new HeaderString(static_cast<http_parser::PTNodeFieldContentType*>(parsed_field.result_ptnode)->content.to_string())));
        }
      }
      else
      {
        error = kWrongHeader;
        break;
      }
    }
    else if (field_line->name->content.match("Content-Length") == 14)
    {
      http_parser::ParseOutput parsed_field = http_parser::ParseFieldContentLength(field_line->value->content);
      if (parsed_field.is_valid())
      {
        if (output->find("Content-Length") == output->end())
        {
          output->insert(std::make_pair("Content-Length", new HeaderInt(static_cast<http_parser::PTNodeFieldContentLength*>(parsed_field.result_ptnode)->number)));
        }
      }
      else
      {
        error = kWrongHeader;
        break;
      }
    }
    else if (field_line->name->content.match("Connection") == 10)
    {
      http_parser::ParseOutput parsed_field = http_parser::ParseFieldConnection(field_line->value->content);
      if (parsed_field.is_valid())
      {
        if (output->find("Connection") == output->end())
        {
          http_parser::PTNodeFieldConnection* connection = static_cast<http_parser::PTNodeFieldConnection*>(parsed_field.result_ptnode);
          for (temporary::vector<http_parser::PTNodeToken*>::iterator it = connection->options.begin(); it != connection->options.end(); it++)
          {
            if ((*it)->content.match("close") == 5)
            {
              output->insert(std::make_pair("Connection", new HeaderString((*it)->content.to_string())));
              break;
            }
          }
        }
      }
      else
      {
        error = kWrongHeader;
        break;
      }
    }
    else if (field_line->name->content.match("Host") == 4)
    {
      http_parser::ParseOutput parsed_field = http_parser::ParseFieldHost(field_line->value->content);
      if (parsed_field.is_valid())
      {
        if (output->find("Host") == output->end())
        {
          output->insert(std::make_pair("Host", new HeaderString(static_cast<http_parser::PTNodeFieldHost*>(parsed_field.result_ptnode)->host->reg_name->content.to_string())));
        }
        else
        {
          error = kDuplicatedHost;
          break;
        }
      }
      else
      {
        error = kWrongHeader;
        break;
      }
    }
    else if (field_line->name->content.match("Transfer-Encoding") == 17)
    {
      http_parser::ParseOutput parsed_field = http_parser::ParseFieldTransferEncoding(field_line->value->content);
      if (parsed_field.is_valid())
      {
        if (output->find("Transfer-Encoding") == output->end())
        {
          http_parser::PTNodeFieldTransferEncoding* transfer_encoding = static_cast<http_parser::PTNodeFieldTransferEncoding*>(parsed_field.result_ptnode);
          for (temporary::vector<http_parser::StringSlice>::iterator it = transfer_encoding->codings.begin(); it != transfer_encoding->codings.end(); it++)
          {
            if (it->match("chunked") == 7)
            {
              output->insert(std::make_pair("Transfer-Encoding", new HeaderString(it->to_string())));
              break;
            }
          }
        }
      }
      else
      {
        error = kWrongHeader;
        break;
      }
    }
    field_line++;
  }
  if (output->find("Host") == output->end())
  {
    error = kNoHost;
  }
  return error;
}

namespace http_parser
{
  ///////////////////////////////////////////////////////////
  ////////////////   scan and parse units    ////////////////
  ///////////////////////////////////////////////////////////

  bool  IsAlpha(char character)
  {
    return ((character >= 'a' && character <= 'z') ||
        (character >= 'A' && character <= 'Z'));
  }

  bool  IsBit(char character)
  {
    return (character == '0' || character == '1');
  }

  bool  IsCarriageReturn(char character)
  {
    return (character == '\r');
  }

  bool  IsControls(char character)
  {
    return ((character <= 31) || (character == 127));
  }

  bool  IsDigit(char character)
  {
    return (character >= '0' && character <= '9');
  }

  bool  IsDoubleQuote(char character)
  {
    return (character == '\"');
  }

  bool  IsHexDigit(char character)
  {
    return (IsDigit(character) || (character >= 'A' && character <= 'F'));
  }

  bool  IsHorizontalTab(char character)
  {
    return (character == 9);
  }

  bool  IsLinefeed(char character)
  {
    return (character == '\n');
  }

  bool  IsSpace(char character)
  {
    return (character == ' ');
  }

  bool  IsVisibleCharacter(char character)
  {
    return (character >= 21 && character <= 126);
  }

  bool  IsWhitespace(char character)
  {
    return (IsSpace(character) || IsHorizontalTab(character));
  }

  bool  IsTokenText(char character)
  {
    return ((std::strchr("!#$%&\'*+-.^_`|~", character) != NULL) ||
          IsDigit(character) ||
          IsAlpha(character));
  }

  bool  IsQuotedStringText(char character)
  {
    return (IsHorizontalTab(character) ||
            IsSpace(character) ||
            (character == '!') ||
            (character >= '#' && character <= '[') ||
            (character >= ']' && character <= '~') ||
            IsOpaqueText(character));
  }

  bool  IsCommentText(char character)
  {
    return (IsHorizontalTab(character) ||
            IsSpace(character) ||
            (character >= '!' && character <= '\'') ||
            (character >= '*' && character <= '[') ||
            (character >= ']' && character <= '~') ||
            IsOpaqueText(character));
  }

  bool  IsOpaqueText(unsigned char character)
  {
    return (character >= 128);
  }

  bool  IsEscapedText(char character)
  {
    return (IsHorizontalTab(character) ||
            IsSpace(character) ||
            IsVisibleCharacter(character) ||
            IsOpaqueText(character));
  }

  //////////////////////////////////////////
  ////////////////   scan   ////////////////
  //////////////////////////////////////////

  StringSlice::StringSlice()
    : bytes(NULL), length(0) {}

  StringSlice::StringSlice(const char* bytes, unsigned int length)
    : bytes(bytes), length(length) {}

  std::string StringSlice::to_string() const
  {
    std::string string(bytes, length);
    return string;
  }

  bool  StringSlice::is_valid() const
  {
    return (bytes != NULL);
  }

  const char* StringSlice::consume(unsigned int amount)
  {
    const char* output = NULL;
    if (amount <= length)
    {
      output = bytes;
      bytes += amount;
      length -= amount;
    }
    return output;
  }

  int  StringSlice::match(const char* string)
  {
    int  matched_length = 0;

    for (unsigned int i = 0; i < length; i++)
    {
      if (!*string || (bytes[i] != string[i]))
        break;
      else
        matched_length++;
    }
    return matched_length;
  }

  ScanOutput  ScanNewLine(Input input)
  {
    ScanOutput output;
    if ((input.length >= 2) &&
        IsCarriageReturn(*input.bytes) &&
        IsLinefeed(*(input.bytes + 1)))
    {
      output.bytes = input.bytes;
      output.length = 2;
    }
    return output;
  }

  ScanOutput  ScanLinearWhiteSpace(Input input)
  {
    ScanOutput output;

    output.bytes = input.bytes;
    while (input.length > 0)
    {
      ScanOutput tmp = ScanNewLine(input);
      if (tmp.is_valid())
      {
        input.consume(tmp.length);
      }
      const char* target = input.consume();
      if (!IsWhitespace(*target))
        break;
      output.length += (tmp.length + 1);
    }
    return output;
  }

  ScanOutput  ScanOptionalWhitespace(Input input)
  {
    ScanOutput output;

    output.bytes = input.bytes;
    while (input.length > 0)
    {
      const char* target = input.consume();
      if (target && !(IsSpace(*target) || IsHorizontalTab(*target)))
        break;
      output.length++;
    }
    return output;
  }

  ScanOutput  ScanRequiredWhitespace(Input input)
  {
    ScanOutput output;

    output.bytes = input.bytes;
    while (input.length > 0)
    {
      const char* target = input.consume();
      if (target && !(IsSpace(*target) || IsHorizontalTab(*target)))
        break;
      output.length++;
    }
    if (output.length < 1)
      output.bytes = NULL;
    return output;
  }

  ScanOutput  ScanBadWhitespace(Input input)
  {
    return ScanOptionalWhitespace(input);
  }

  ///////////////////////////////////////////
  ////////////////   parse   ////////////////
  ///////////////////////////////////////////

  ParseOutput::ParseOutput()
    : result_ptnode(NULL), length(0) {}

  bool  ParseOutput::is_valid() const
  {
    return result_ptnode != NULL;
  }

  int ConsumeByCharacter(Input* input, char character)
  {
    int consumed_character = 0;
    if (input->length > 0)
    {
      if (*input->bytes == character)
      {
        input->consume();
        consumed_character = 1;
      }
    }
    return consumed_character;
  }

  int ConsumeByCString(Input* input, const char* cstring)
  {
    int consumed_character = 0;
    for (unsigned int i = 0; i < input->length; i++)
    {
      if (*cstring && (*cstring == input->bytes[i]))
      {
        consumed_character++;
        cstring++;
      }
      else
        break;
    }
    if (*cstring)
      consumed_character = 0;
    else
      input->consume(consumed_character);
    return consumed_character;
  }

  int ConsumeByUnitFunction(Input* input, bool (*func)(char))
  {
    int consumed_character = 0;
    if (input->length > 0)
    {
      if (func(*input->bytes))
      {
        input->consume();
        consumed_character = 1;
      }
    }
    return consumed_character;
  }

  ScanOutput  ConsumeByScanFunction(Input* input, ScanOutput (*func)(Input))
  {
    ScanOutput  output = func(*input);
    if (output.is_valid())
    {
      input->consume(output.length);
    }
    return output;
  }

  ParseOutput  ConsumeByParserFunction(Input* input, ParseOutput (*func)(Input))
  {
    ParseOutput output = func(*input);
    if (output.is_valid())
    {
      input->consume(output.length);
    }
    return output;
  }

  ///////////////////////////////////////////
  ////////////////   token   ////////////////
  ///////////////////////////////////////////

  ParseOutput  ParseToken(Input input)
  {
    ParseOutput output;
    StringSlice content;
    content.bytes = input.bytes;
    while (input.length > 0)
    {
      if (!ConsumeByUnitFunction(&input, &IsTokenText))
        break;
      content.length++;
    }
    if (content.length >= 1)
    {
      PTNodeToken*  token = PTNodeCreate<PTNodeToken>();
      token->type = kToken;
      token->content = content;

      output.length = content.length;
      output.result_ptnode = token;
    }
    return output;
  }

  ParseOutput  ParseQuotedString(Input input)
  {
    ParseOutput output;
    StringSlice content;
    content.bytes = input.bytes;
    content.length = ConsumeByUnitFunction(&input, &IsDoubleQuote);
    if (content.length > 0)
    {
      int parsed_length = 1;
      while (input.length > 0 && parsed_length > 0)
      {
        int   parsed_length = ConsumeByUnitFunction(&input, &IsQuotedStringText);
        if (parsed_length == 0)
        {
          parsed_length = ConsumeByCharacter(&input, '\\');
          if (parsed_length > 0)
          {
            int parsed_length_2 = ConsumeByUnitFunction(&input, &IsEscapedText);
            if (parsed_length_2 > 0)
              parsed_length += parsed_length_2;
          }
        }
        content.length += parsed_length;
      }
      parsed_length = ConsumeByUnitFunction(&input, &IsDoubleQuote);
      if (parsed_length > 0)
      {
        content.length += parsed_length;
        PTNodeQuotedString*  quoted_string = PTNodeCreate<PTNodeQuotedString>();
        quoted_string->type = kQuotedString;
        quoted_string->content = content;

        output.length = content.length;
        output.result_ptnode = quoted_string;
      }
    }
    return output;
  }

  ParseOutput  ParseComment(Input input)
  {
    ParseOutput output;
    StringSlice content;
    content.bytes = input.bytes;
    content.length = ConsumeByCharacter(&input, '(' );
    if (content.length > 0)
    {
      int parsed_length = 1;
      while (input.length > 0 && parsed_length > 0)
      {
        int parsed_length = ConsumeByUnitFunction(&input, &IsCommentText);
        if (parsed_length == 0)
        {
          parsed_length = ConsumeByCharacter(&input, '\\');
          if (parsed_length > 0)
          {
            int parsed_length_2 = ConsumeByUnitFunction(&input, &IsEscapedText);
            if (parsed_length_2 > 0)
            {
              parsed_length += parsed_length_2;
            }
          }
        }
        if (parsed_length == 0)
        {
          ArenaSnapshot snapshot = temporary::arena.snapshot();
          ParseOutput parse_output = ConsumeByParserFunction(&input, &ParseComment);
          if (parse_output.is_valid())
          {
            parsed_length = parse_output.length;
            temporary::arena.rollback(snapshot);
          }
        }
        content.length += parsed_length;
      }
      parsed_length = ConsumeByCharacter(&input, ')');
      if (parsed_length > 0)
      {
        content.length++;
        PTNodeComment*  comment = PTNodeCreate<PTNodeComment>();
        comment->type = kComment;

        output.length = content.length;
        output.result_ptnode = comment;
      }
    }
    return output;
  }

  ParseOutput  ParseParameter(Input input)
  {
    ParseOutput output;

    ArenaSnapshot snapshot = temporary::arena.snapshot();
    ParseOutput name_parse_output = ConsumeByParserFunction(&input, &ParseToken);
    if (name_parse_output.is_valid())
    {
      int parsed_length = ConsumeByCharacter(&input, '=');
      if (parsed_length > 0)
      {
        ParseOutput value_parse_output = ConsumeByParserFunction(&input, &ParseToken);
        if (value_parse_output.is_valid())
        {
          value_parse_output = ConsumeByParserFunction(&input, &ParseQuotedString);
        }
        if (value_parse_output.length > 0)
        {
          PTNodeParameter*  parameter = PTNodeCreate<PTNodeParameter>();
          parameter->type = kParameter;
          parameter->name = static_cast<PTNodeToken*>(name_parse_output.result_ptnode);
          parameter->value_header = value_parse_output.result_ptnode;

          output.length = name_parse_output.length + parsed_length + value_parse_output.length;
          output.result_ptnode = parameter;
        }
        else
        {
          temporary::arena.rollback(snapshot);
        }
      }
    }
    return output;
  }

  ParseOutput  ParseParameters(Input input)
  {
    ParseOutput output;
    int parsed_length = 0;
    temporary::vector<PTNodeParameter*> children;

    while (input.length > 0)
    {
      int error = true;
      int parsed_length_1 = ConsumeByScanFunction(&input, &ScanOptionalWhitespace).length;
      int parsed_length_2 = ConsumeByCharacter(&input, ';');
      if (parsed_length_2 > 0)
      {
        int parsed_length_3 = ConsumeByScanFunction(&input, &ScanOptionalWhitespace).length;
        ParseOutput parameter_parse_output = ConsumeByParserFunction(&input, &ParseParameter);
        if (parameter_parse_output.is_valid())
        {
          parsed_length += parsed_length_1 + parsed_length_2 + parsed_length_3 + parameter_parse_output.length;
          children.push_back(static_cast<PTNodeParameter*>(parameter_parse_output.result_ptnode));
          error = false;
        }
      }
      if (error)
        break;
    }
    if (children.size() > 0)
    {
      PTNodeParameters* parameters = PTNodeCreate<PTNodeParameters>();
      parameters->type = kParameters;
      parameters->children = children;

      output.length = parsed_length;
      output.result_ptnode = parameters;
    }
    return output;
  }

  /////////////////////////////////////////
  ////////////////   path   ///////////////
  /////////////////////////////////////////

  bool  IsUnreservered(char character)
  {
    return (IsAlpha(character) ||
            IsDigit(character) ||
            std::strchr("-._~", character));
  }

  bool  IsReservered(char character)
  {
    return (IsGenDelims(character) ||
            IsSubDelims(character));
  }

  bool  IsGenDelims(char character)
  {
    return (std::strchr(":/?#[]", character));
  }

  bool  IsSubDelims(char character)
  {
    return (std::strchr("!$&'()*+,;=", character));
  }

  ScanOutput  ScanPathChar(Input input)
  {
    ScanOutput  output;
    if (input.length > 0 &&
        (IsUnreservered(*input.bytes) ||
        IsSubDelims(*input.bytes) ||
        *input.bytes == ':' ||
        *input.bytes == '@'))
    {
      output.bytes = input.bytes;
      output.length = 1;
    }
    else
    {
      output = ScanPctEncoded(input);
    }
    return output;
  }

  ScanOutput  ScanPctEncoded(Input input)
  {
    ScanOutput  output;

    if (input.length >= 3)
    {
      if (*input.bytes == '%' &&
          IsHexDigit(*(input.bytes + 1)) &&
          IsHexDigit(*(input.bytes + 2)))
      {
        output.bytes = input.bytes;
        output.length = 3;
      }
    }
    return output;
  }

  ScanOutput  ScanSegment(Input input)
  {
    ScanOutput  output;

    output.bytes = input.bytes;
    int total_length = 0;
    ScanOutput scan_result = ConsumeByScanFunction(&input, &ScanPathChar);
    while (scan_result.is_valid())
    {
      total_length += scan_result.length;
      scan_result = ConsumeByScanFunction(&input, &ScanPathChar);
    }
    output.length = total_length;
    return output;
  }

  ScanOutput  ScanSegments(Input input)
  {
    ScanOutput  output;

    output.bytes = input.bytes;
    int total_length = 0;
    while (true)
    {
      int parsed_length_1 = ConsumeByCharacter(&input, '/');
      int parsed_length_2 = 0;
      if (parsed_length_1 > 0)
      {
        parsed_length_2 = ConsumeByScanFunction(&input, &ScanSegment).length;
      }
      int segment_length = parsed_length_1 + parsed_length_2;
      if (segment_length > 0)
        total_length += segment_length;
      else
        break;
    }
    output.length = total_length;
    return output;
  }

  ScanOutput  ScanSegmentNz(Input input)
  {
    ScanOutput  output;

    output.bytes = input.bytes;
    int total_length = 0;
    ScanOutput scan_result = ConsumeByScanFunction(&input, &ScanPathChar);
    while (scan_result.is_valid())
    {
      total_length += scan_result.length;
      scan_result = ConsumeByScanFunction(&input, &ScanPathChar);
    }
    if (total_length > 1)
      output.length = total_length;
    else
      output.bytes = NULL;
    return output;
  }

  ScanOutput  ScanSegmentNzNc(Input input)
  {
    ScanOutput  output;

    output.bytes = input.bytes;
    int total_length = 0;
    int scan_length = 1;
    while (scan_length > 0)
    {
      scan_length = ConsumeByUnitFunction(&input, &IsUnreservered);
      if (scan_length == 0)
        scan_length = ConsumeByScanFunction(&input, &ScanPctEncoded).length;
      if (scan_length == 0)
        scan_length = ConsumeByUnitFunction(&input, &IsSubDelims);
      if (scan_length == 0)
        scan_length = ConsumeByCharacter(&input, '@');
      total_length += scan_length;
    }
    if (total_length > 1)
      output.length = total_length;
    else
      output.bytes = NULL;
    return output;
  }

  ParseOutput  ParsePathAbEmpty(Input input)
  {
    ParseOutput output;
    StringSlice content = ConsumeByScanFunction(&input, &ScanSegments);
    PTNodePathAbEmpty*  path_abempty = PTNodeCreate<PTNodePathAbEmpty>();

    path_abempty->type = kPathAbempty;
    path_abempty->content = content;

    output.length = content.length;
    output.result_ptnode = path_abempty;
    return output;
  }

  ParseOutput  ParsePathAbsolute(Input input)
  {
    ParseOutput output;
